Add prisma migrations
